konchatov/compiler/XMLlangParser.py
# Generated from XMLlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class XMLlangParser ( Parser ):

    grammarFileName = "XMLlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'document'", "'node'", "'attribute'", 
                     "<INVALID>", "'delete'", "'load'", "'func'", "'if'", 
                     "'else'", "'switch'", "'for'", "'while'", "'read'", 
                     "'write'", "'create'", "'in'", "'case'", "'default'", 
                     "'to'", "'void'", "'addAttribute'", "'appendTo'", "'save'", 
                     "'getAttribute'", "'getText'", "'getName'", "'getValue'", 
                     "'getNodes'", "'edit'", "'transform'", "'root'", "'file'", 
                     "'name'", "'text'", "'value'", "<INVALID>", "'return'", 
                     "'break'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'!'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'.'", "','", "'+'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "DOCUMENT", "NODE", "ATTRIBUTE", 
                      "BASETYPE", "DELETE", "LOAD", "FUNC", "IF", "ELSE", 
                      "SWITCH", "FOR", "WHILE", "READ", "WRITE", "CREATE", 
                      "IN", "CASE", "DEFAULT", "TO", "TYPEVOID", "ADDA", 
                      "APPEND", "SAVE", "GETATTR", "GETTEXT", "GETNAME", 
                      "GETVALUE", "GETNODES", "EDIT", "TRANSFORM", "ROOT", 
                      "FILE", "NAME", "TEXT", "VALUE", "TRANSFTO", "RETURN", 
                      "BREAK", "COMMENT", "MULTILINE_COMMENT", "PASS", "BOOL", 
                      "ID", "STRING", "INT", "FLOAT", "INEQUALITYSIGN", 
                      "EQ", "NEG", "LC", "RC", "LF", "RF", "LS", "RS", "PNT", 
                      "COM", "PLS", "SL", "WS" ]

    RULE_start = 0
    RULE_program = 1
    RULE_def = 2
    RULE_defDecl = 3
    RULE_stat = 4
    RULE_conCycOperator = 5
    RULE_ifcon = 6
    RULE_switchcon = 7
    RULE_forcon = 8
    RULE_whilecon = 9
    RULE_body = 10
    RULE_assignment = 11
    RULE_typeList = 12
    RULE_opList = 13
    RULE_assFunc = 14
    RULE_statFunc = 15
    RULE_read = 16
    RULE_write = 17
    RULE_create = 18
    RULE_createDoc = 19
    RULE_createNode = 20
    RULE_createAttribute = 21
    RULE_edit = 22
    RULE_docEdit = 23
    RULE_nodeEdite = 24
    RULE_attributeEdit = 25
    RULE_load = 26
    RULE_transform = 27
    RULE_xmldelete = 28
    RULE_save = 29
    RULE_getAttribute = 30
    RULE_addAttribute = 31
    RULE_append = 32
    RULE_getNodeText = 33
    RULE_getName = 34
    RULE_getValue = 35
    RULE_getNodes = 36
    RULE_getListElement = 37
    RULE_nodeSumm = 38
    RULE_condition = 39
    RULE_returnVal = 40
    RULE_defCall = 41
    RULE_type = 42
    RULE_list = 43
    RULE_val = 44

    ruleNames =  [ "start", "program", "def", "defDecl", "stat", "conCycOperator", 
                   "ifcon", "switchcon", "forcon", "whilecon", "body", "assignment", 
                   "typeList", "opList", "assFunc", "statFunc", "read", 
                   "write", "create", "createDoc", "createNode", "createAttribute", 
                   "edit", "docEdit", "nodeEdite", "attributeEdit", "load", 
                   "transform", "xmldelete", "save", "getAttribute", "addAttribute", 
                   "append", "getNodeText", "getName", "getValue", "getNodes", 
                   "getListElement", "nodeSumm", "condition", "returnVal", 
                   "defCall", "type", "list", "val" ]

    EOF = Token.EOF
    T__0=1
    DOCUMENT=2
    NODE=3
    ATTRIBUTE=4
    BASETYPE=5
    DELETE=6
    LOAD=7
    FUNC=8
    IF=9
    ELSE=10
    SWITCH=11
    FOR=12
    WHILE=13
    READ=14
    WRITE=15
    CREATE=16
    IN=17
    CASE=18
    DEFAULT=19
    TO=20
    TYPEVOID=21
    ADDA=22
    APPEND=23
    SAVE=24
    GETATTR=25
    GETTEXT=26
    GETNAME=27
    GETVALUE=28
    GETNODES=29
    EDIT=30
    TRANSFORM=31
    ROOT=32
    FILE=33
    NAME=34
    TEXT=35
    VALUE=36
    TRANSFTO=37
    RETURN=38
    BREAK=39
    COMMENT=40
    MULTILINE_COMMENT=41
    PASS=42
    BOOL=43
    ID=44
    STRING=45
    INT=46
    FLOAT=47
    INEQUALITYSIGN=48
    EQ=49
    NEG=50
    LC=51
    RC=52
    LF=53
    RF=54
    LS=55
    RS=56
    PNT=57
    COM=58
    PLS=59
    SL=60
    WS=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(XMLlangParser.EOF, 0)

        def program(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.ProgramContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.ProgramContext,i)


        def getRuleIndex(self):
            return XMLlangParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = XMLlangParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19516333619964) != 0):
                self.state = 90
                self.program()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(XMLlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defDecl(self):
            return self.getTypedRuleContext(XMLlangParser.DefDeclContext,0)


        def def_(self):
            return self.getTypedRuleContext(XMLlangParser.DefContext,0)


        def defCall(self):
            return self.getTypedRuleContext(XMLlangParser.DefCallContext,0)


        def stat(self):
            return self.getTypedRuleContext(XMLlangParser.StatContext,0)


        def getRuleIndex(self):
            return XMLlangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = XMLlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.defDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.def_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.defCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(XMLlangParser.FUNC, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.ID)
            else:
                return self.getToken(XMLlangParser.ID, i)

        def LC(self):
            return self.getToken(XMLlangParser.LC, 0)

        def RC(self):
            return self.getToken(XMLlangParser.RC, 0)

        def body(self):
            return self.getTypedRuleContext(XMLlangParser.BodyContext,0)


        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.TypeContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.TypeContext,i)


        def TYPEVOID(self):
            return self.getToken(XMLlangParser.TYPEVOID, 0)

        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.COM)
            else:
                return self.getToken(XMLlangParser.COM, i)

        def getRuleIndex(self):
            return XMLlangParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)




    def def_(self):

        localctx = XMLlangParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 4, 5]:
                self.state = 104
                self.type_()
                pass
            elif token in [21]:
                self.state = 105
                self.match(XMLlangParser.TYPEVOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self.match(XMLlangParser.FUNC)
            self.state = 109
            self.match(XMLlangParser.ID)
            self.state = 110
            self.match(XMLlangParser.LC)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                self.state = 111
                self.type_()
                self.state = 112
                self.match(XMLlangParser.ID)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==58:
                    self.state = 113
                    self.match(XMLlangParser.COM)
                    self.state = 114
                    self.type_()
                    self.state = 115
                    self.match(XMLlangParser.ID)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 124
            self.match(XMLlangParser.RC)
            self.state = 125
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(XMLlangParser.FUNC, 0)

        def ID(self):
            return self.getToken(XMLlangParser.ID, 0)

        def LC(self):
            return self.getToken(XMLlangParser.LC, 0)

        def RC(self):
            return self.getToken(XMLlangParser.RC, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.TypeContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.TypeContext,i)


        def TYPEVOID(self):
            return self.getToken(XMLlangParser.TYPEVOID, 0)

        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.COM)
            else:
                return self.getToken(XMLlangParser.COM, i)

        def getRuleIndex(self):
            return XMLlangParser.RULE_defDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefDecl" ):
                listener.enterDefDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefDecl" ):
                listener.exitDefDecl(self)




    def defDecl(self):

        localctx = XMLlangParser.DefDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 4, 5]:
                self.state = 127
                self.type_()
                pass
            elif token in [21]:
                self.state = 128
                self.match(XMLlangParser.TYPEVOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 131
            self.match(XMLlangParser.FUNC)
            self.state = 132
            self.match(XMLlangParser.ID)
            self.state = 133
            self.match(XMLlangParser.LC)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                self.state = 134
                self.type_()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==58:
                    self.state = 135
                    self.match(XMLlangParser.COM)
                    self.state = 136
                    self.type_()
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(XMLlangParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conCycOperator(self):
            return self.getTypedRuleContext(XMLlangParser.ConCycOperatorContext,0)


        def assignment(self):
            return self.getTypedRuleContext(XMLlangParser.AssignmentContext,0)


        def assFunc(self):
            return self.getTypedRuleContext(XMLlangParser.AssFuncContext,0)


        def statFunc(self):
            return self.getTypedRuleContext(XMLlangParser.StatFuncContext,0)


        def returnVal(self):
            return self.getTypedRuleContext(XMLlangParser.ReturnValContext,0)


        def BREAK(self):
            return self.getToken(XMLlangParser.BREAK, 0)

        def COMMENT(self):
            return self.getToken(XMLlangParser.COMMENT, 0)

        def getRuleIndex(self):
            return XMLlangParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = XMLlangParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stat)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.conCycOperator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.assFunc()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.statFunc()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.returnVal()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.match(XMLlangParser.BREAK)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 152
                self.match(XMLlangParser.COMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConCycOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifcon(self):
            return self.getTypedRuleContext(XMLlangParser.IfconContext,0)


        def switchcon(self):
            return self.getTypedRuleContext(XMLlangParser.SwitchconContext,0)


        def forcon(self):
            return self.getTypedRuleContext(XMLlangParser.ForconContext,0)


        def whilecon(self):
            return self.getTypedRuleContext(XMLlangParser.WhileconContext,0)


        def getRuleIndex(self):
            return XMLlangParser.RULE_conCycOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConCycOperator" ):
                listener.enterConCycOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConCycOperator" ):
                listener.exitConCycOperator(self)




    def conCycOperator(self):

        localctx = XMLlangParser.ConCycOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_conCycOperator)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.ifcon()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.switchcon()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.forcon()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.whilecon()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfconContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(XMLlangParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(XMLlangParser.ConditionContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.BodyContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.BodyContext,i)


        def ELSE(self):
            return self.getToken(XMLlangParser.ELSE, 0)

        def getRuleIndex(self):
            return XMLlangParser.RULE_ifcon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfcon" ):
                listener.enterIfcon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfcon" ):
                listener.exitIfcon(self)




    def ifcon(self):

        localctx = XMLlangParser.IfconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifcon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(XMLlangParser.IF)
            self.state = 162
            self.condition()
            self.state = 163
            self.body()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 164
                self.match(XMLlangParser.ELSE)
                self.state = 165
                self.body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchconContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(XMLlangParser.SWITCH, 0)

        def ID(self):
            return self.getToken(XMLlangParser.ID, 0)

        def LF(self):
            return self.getToken(XMLlangParser.LF, 0)

        def RF(self):
            return self.getToken(XMLlangParser.RF, 0)

        def CASE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.CASE)
            else:
                return self.getToken(XMLlangParser.CASE, i)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.BodyContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.BodyContext,i)


        def DEFAULT(self):
            return self.getToken(XMLlangParser.DEFAULT, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.INT)
            else:
                return self.getToken(XMLlangParser.INT, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.FLOAT)
            else:
                return self.getToken(XMLlangParser.FLOAT, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.STRING)
            else:
                return self.getToken(XMLlangParser.STRING, i)

        def BOOL(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.BOOL)
            else:
                return self.getToken(XMLlangParser.BOOL, i)

        def getRuleIndex(self):
            return XMLlangParser.RULE_switchcon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchcon" ):
                listener.enterSwitchcon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchcon" ):
                listener.exitSwitchcon(self)




    def switchcon(self):

        localctx = XMLlangParser.SwitchconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_switchcon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(XMLlangParser.SWITCH)
            self.state = 169
            self.match(XMLlangParser.ID)
            self.state = 170
            self.match(XMLlangParser.LF)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 171
                self.match(XMLlangParser.CASE)
                self.state = 172
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 255086697644032) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 173
                self.match(XMLlangParser.T__0)
                self.state = 174
                self.body()
                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18):
                    break

            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 179
                self.match(XMLlangParser.DEFAULT)
                self.state = 180
                self.body()


            self.state = 183
            self.match(XMLlangParser.RF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForconContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(XMLlangParser.FOR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(XMLlangParser.ID)
            else:
                return self.getToken(XMLlangParser.ID, i)

        def IN(self):
            return self.getToken(XMLlangParser.IN, 0)

        def body(self):
            return self.getTypedRuleContext(XMLlangParser.BodyContext,0)


        def getRuleIndex(self):
            return XMLlangParser.RULE_forcon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForcon" ):
                listener.enterForcon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForcon" ):
                listener.exitForcon(self)




    def forcon(self):

        localctx = XMLlangParser.ForconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forcon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(XMLlangParser.FOR)
            self.state = 186
            self.match(XMLlangParser.ID)
            self.state = 187
            self.match(XMLlangParser.IN)
            self.state = 188
            self.match(XMLlangParser.ID)
            self.state = 189
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileconContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(XMLlangParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(XMLlangParser.ConditionContext,0)


        def body(self):
            return self.getTypedRuleContext(XMLlangParser.BodyContext,0)


        def getRuleIndex(self):
            return XMLlangParser.RULE_whilecon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilecon" ):
                listener.enterWhilecon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilecon" ):
                listener.exitWhilecon(self)




    def whilecon(self):

        localctx = XMLlangParser.WhileconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whilecon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(XMLlangParser.WHILE)
            self.state = 192
            self.condition()
            self.state = 193
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LF(self):
            return self.getToken(XMLlangParser.LF, 0)

        def RF(self):
            return self.getToken(XMLlangParser.RF, 0)

        def program(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLlangParser.ProgramContext)
            else:
                return self.getTypedRuleContext(XMLlangParser.ProgramContext,i)


        def getRuleIndex(self):
            return XMLlangParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = XMLlangParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_body)
        self._la = 0 # Token type
        try:
